# tinyCUDA-BLAS

./: .gitignore  CMakeLists.txt  test.cpp
benchmark/: bench_main.cpp
include/: sgemm.h
src/: sgemm_cpu.cpp  sgemm_gpu.cu
